Fix the display where the '・' in the <li> tag is overflowing the box.

--- a/app/assets/stylesheets/layout.scss
+++ b/app/assets/stylesheets/layout.scss
@@ -19,7 +19,7 @@ body {
 
 /* フォーム(Top・Devise共通) */
 .form-group {
-  margin-bottom: 20px;
+  margin-bottom: 1rem;
 }
 
 .form-input {
